# travel_-strateg

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env  Cargo.toml
backend/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  routes.rs
src/: App.tsx
src/components/: Footer.tsx  MarkdownEditor.tsx  Navbar.tsx  StepMessage.tsx  StepProgressBar.tsx
src/pages/: AIChat.tsx  DestinationDetail.tsx  Destinations.tsx  GuideDetail.tsx  GuideEditor.tsx  Guides.tsx  Home.tsx  NewGuide.tsx
