[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies][package]
name = "guide-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
futures = "0.3"
parking_lot = "0.12"
